crates/mdbook-permalinks/tests/path_encoding/stderr/data.txt
warning: broken link to "../static/東京都新宿二丁目.jpg"
 --> crates/mdbook-permalinks/tests/path_encoding/src/東京都港区.md:5:5
  |
5 | ![](../static/東京都新宿二丁目.jpg)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     resolves to a path that doesn't exist:
  |     "crates/mdbook-permalinks/tests/path_encoding/static/東京都新宿二丁目.jpg"

warning: broken link to "../static/%00%00%00%00.jpg"
 --> crates/mdbook-permalinks/tests/path_encoding/src/東京都港区.md:7:5
  |
7 | ![](../static/%00%00%00%00.jpg)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     resolves to a path that cannot be accessed: I/O error: invalid input parameter:
  |     "crates/mdbook-permalinks/tests/path_encoding/static/\0/0\0/0.jpg"

warning: broken link to "/東京都港区/南青山.md"
 --> crates/mdbook-permalinks/tests/path_encoding/src/東京都港区.md:9:4
  |
9 | [](/東京都港区/南青山.md)
  |    ^^^^^^^^^^^^^^^^^^^^^ resolves to a path that doesn't exist
  |
note: the following path is available:
      "/crates/mdbook-permalinks/tests/path_encoding/src/東京都港区/南青山.md"
help: try using a relative path starting from the current page:
  |
9 - [](/東京都港区/南青山.md)
9 + [](東京都港区/南青山.md)
  |
help: ... or use an absolute path starting from the root of your repository:
  |
9 | [](/crates/mdbook-permalinks/tests/path_encoding/src/東京都港区/南青山.md)
  |    +++++++++++++++++++++++++++++++++++++++++++++++++
  = note: `mdbook-permalinks` will convert this path to a format accepted by mdBook

 WARN mdbook-permalinks: finished with warnings
